--- a/.pylintrc
+++ b/.pylintrc
@@ -5,6 +5,7 @@ disable=
       C0115,  # Missing class docstring
       C0116,  # Missing function or method docstring
       W0703,  # Catching too general exception Exception
+      R0903,  # Too few public methods
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
